--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Formatering av string</title>
 </head>
 <body>
-    <div id="app">
-        
-    </div>
+    <div id="app"></div>
     <script>
         //M
         let firstName = 'terje'
